# ps5-raspberry-controller

./: Cargo.toml  test.py
.github/workflows/: build-rpi.yml
src/: bluetooth.rs  bluetooth_faker.rs  interface.rs  main.rs
src/interfaces/: bluetooth.rs  internal.rs  mod.rs  usb.rs
