[package]
name = "bt_hid_gamepad"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = "1"
bitflags = "2.9"
hidapi = "2"
futures-util = "0.3"
bluer = { version = "0.17.3", features = ["bluetoothd"] }

[target."cfg(target_os = \"linux\")".dependencies]
zbus = "5.5.0"
bluer = { version = "0.17.3", features = ["bluetoothd"] }
